fixed flicker

--- a/css/style.css
+++ b/css/style.css
@@ -385,23 +385,28 @@ li{
     .navbar-header {
         float: none;
         display: none;
+        -webkit-backface-visibility: hidden;
     }
     .navbar-toggle {
         display: block;
+        -webkit-backface-visibility: hidden;
     }
     .navbar-collapse {
         border-top: 1px solid transparent;
         box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
         display: none;
+        -webkit-backface-visibility: hidden;
+
     }
     .navbar-collapse.collapse {
         display: none!important;
-
+        -webkit-backface-visibility: hidden;
     }
     .navbar-nav {
         float: none!important;
         margin: 7.5px -15px;
         display: none;
+        -webkit-backface-visibility: hidden;
     }
     .navbar-nav>li {
         float: none;
